[project]
name = "rentbot"
version = "1.0.0"
description = "Telegram bot for rent payments and debt tracking"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.0",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "aiohttp>=3.8"
]
authors = [{name = "WayZe"}]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
rentbot = "rentbot.app:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21"
]

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["rentbot/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "asyncpg.*",
    "apscheduler.*",
]
ignore_missing_imports = true
